--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,14 @@ fuzzywuzzy
 python-Levenshtein
 nltk
 pyspellchecker
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+joblib==1.4.2
+scikit-learn==1.4.2
+scipy==1.13.1
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.25.1
+pyspellchecker==0.8.1
+xgboost==2.0.3
+requests==2.32.2
